--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ansar.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./logo192.png"></script>
     <title>BrandMount</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>This is owned by Brandmount</noscript>
     <div id="root"></div>
    
   </body>
